[project]
name = "track-osc"
version = "0.1.0"
description = "A simple command-line tool to detect objects and relay information via OSC."
authors = [{ name = "Miguel NegrÆo", email = "miguel.negrao@ipleiria.pt" }]
requires-python = ">=3.10,<3.14"
dependencies = [
  "opencv-python>=4.10.0.84,<5.0.0",
  "ultralytics>=8.3.40,<9.0.0",
  "python-osc>=1.9.0,<2.0.0",
  "lap>=0.5.12,<0.6.0",
]

[project.scripts]
track-osc = "track_osc.cli:main"
build-exe = "track_osc.build_exe:main"
osc-test-client = "track_osc.osc_test_client:main"

[project.optional-dependencies]
dev = ["pyinstaller>=6.11.0,<7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
